googlecloud/gke-anthos/canary/nginx-or-apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      name: http # required for cloud service mesh https://cloud.google.com/service-mesh/legacy/in-cluster/operate-and-maintain/name-service-port
      port: 80
      targetPort: 80
