googlecloud/gke-anthos/canary/nginx-or-apache/virtual-service-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
  name: canary
spec:
  gateways:
  - http-gw
  - https-gw
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /apis/$NAMESPACE/vssubset
    name: canary-vssubset
    rewrite:
      uri: /
    route:
    - destination:
        host: canary-svc.$NAMESPACE.svc.cluster.local
        port:
          number: 80
        subset: v2
      weight: 90
    - destination:
        host: canary-svc.$NAMESPACE.svc.cluster.local
        port:
          number: 80
        subset: v1
      weight: 10
